# golfapi-scapper

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GETTING_STARTED.md  README.md  check_data.py  docker-compose.yml  pyproject.toml  requirements.md  run.py  update_start_id.py
src/: __init__.py  config.py  database.py  main.py  scraper.py
